qc pass: dvbgse without fragmentation
qc pass: dvbgse with fragmentation
---------------------------------- 2026-01-02 20:51:44 26.1.2
qc pass: dvbgse without baseband
qc pass: dvbgse with baseband
---------------------------------- 2026-01-02 21:18:20 26.1.2
no qc pass: capwap server
qc pass: vlan tunneling with capwap
---------------------------------- 2026-01-02 21:47:33 26.1.2
no qc pass: vlan tunneling with capwap
qc pass: dvbgse with ax25
qc pass: dvbgse tunneling with capwap
qc pass: capwap server
qc pass: dvbgse tunneling with dlsw
qc pass: dvbgse tunneling with eoip
qc pass: dvbgse tunneling with erspan
qc pass: dvbgse tunneling with etherip
qc pass: dvbgse tunneling with geneve
qc pass: dvbgse with greppp
qc pass: dvbgse with grefr
qc pass: dvbgse over l2tp3
qc pass: dvbgse tunneling with l2tp3
qc pass: dvbgse tunneling with llcudp
qc pass: dvbgse tunneling with lwapp
qc pass: dvbgse tunneling with nvgre
qc pass: dvbgse tunneling with packet over udp
qc pass: dvbgse tunneling with sreth
qc pass: dvbgse with tdmoudp
qc pass: dvbgse tunneling with tzsp
qc pass: dvbgse tunneling with uti
qc pass: dvbgse tunneling with vxlan
qc pass: cross connect dvbgse interfaces
qc pass: sgt dvbgse encapsulation
qc pass: dvbgse over mpls
qc pass: dvbgse tunneling with mpls
---------------------------------- 2026-01-03 09:45:36 26.1.3
qc pass: interop0: hdlc
qc pass: interop0: ppp
---------------------------------- 2026-01-03 11:02:46 26.1.3
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
qc pass: interop0: framerelay ansi
qc pass: interop0: framerelay cisco
qc pass: interop0: framerelay q933a
qc pass: interop0: framerelay dce
---------------------------------- 2026-01-03 12:10:13 26.1.3
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
qc pass: interop0: atmdxi
qc pass: interop0: framerelay ppp
qc pass: interop0: framerelay ietf
qc pass: interop0: lapb dte
qc pass: interop0: lapb dce
qc pass: interop0: lapb mod128